# vk-chat-bot

./: .env.template  .gitignore  README.md  bot.py  config.py  currency.py  keyboard_actions.py  pyproject.toml  requirements.txt  weather.py
blueprints/: change_city_button.py  city.py  currency_button.py  menu.py  start_button.py  weather_button.py
data/: names_of_cities.txt
database/: db_connection.py
utils/: currency.py  names_of_cities.py  weather.py
